hphp/hack/test/typecheck/const_attribute/static/multiple_concrete_defs_from_traits_good.php.exp
File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
Member $p has the wrong type (Typing[4341])
File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
T3 and T1 both declare ambiguous implementations of $p.
File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
T3's definition is here.
File "multiple_concrete_defs_from_traits_good.php", line 5, characters 29-31:
T1's definition is here.
File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
Redeclare $p in C with a compatible signature.
File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
Member $p has the wrong type (Typing[4341])
File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
T3 and T2 both declare ambiguous implementations of $p.
File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
T3's definition is here.
File "multiple_concrete_defs_from_traits_good.php", line 9, characters 29-31:
T2's definition is here.
File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
Redeclare $p in C with a compatible signature.
